fixing the spacing on the website

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Open Sans', sans-serif;
+}
+
 #header {
     background-image: url('img/header-image.jpg');
     background-repeat: no-repeat;
@@ -6,7 +10,7 @@
 }
     
     #main-container {
-        max-width: 95%;
+        max-width: 75%;
         background-color: #D9D9AB;
         z-index: 20000;
         margin-top: -50px;
@@ -14,6 +18,12 @@
     ul  {
     list-style: none;
 }
+
+.lead {
+    padding: 0 200px;
+    text-align: justify;
+}
+
 #caption {
     padding: 20%;
 }
@@ -61,12 +71,17 @@ i {
     color: ivory;
 }
 
+#portfolio-section {
+    max-width: 75%;
+}
+
 .card {
-    margin: 10px;
+    margin: 5px auto;
+
 }
 
 #call-to-action {
-    max-width: 95%;
+    max-width: 75%;
     margin-top: 30px;
     background-color: #191970;
     z-index: 30;
